# rentorown

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  Procfile  README.md  README.rst  codecov.yml  env.yml  environment.yml  house.py  index.ipynb  mortgage.py  mortgageClass.py  mortgage_old.py  noxfile.py  pbb_mortgage.py  pbb_mortgage2.py  pyproject.toml  requirements.txt  setup.py  version.py
.github/: dependabot_merge.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.rst  modules.rst  mortgage.rst  old_index.rst  reference.rst  requirements.txt  usage.rst
docs/source/: conf.py  index.rst  mortgage.rst
mortgage/: __init__.py  asset.py  house.py  house_old.py  investment.py  investment_old.py  mortgage_old.py  rebuild.ipynb  rebuild.py  rentorown.py
src/rentorown/: __init__.py  asset.py  house.py  rentorown.py
tests/: __init__.py  conftest.py  house_tests.py  mortgage_test_old.py  mortgage_tests.py  pbb_mortgage_tests.py  test_house.py  test_mortgage.py
web/: rent_or_own.ipynb
