[tool.poetry]
name = "rentorown"
version = "0.1.0"
description = "Rent or Own"
authors = ["Ian Preston <ian.e.preston@gmail.com>"]
license = "GPL-3.0"
readme = "README.rst"
homepage = "https://github.com/ianepreston/rentorown"
repository = "https://github.com/ianepreston/rentorown"
documentation = "https://rentorown.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/ianepreston/rentorown/releases"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0.0"
pandas = "^1.3.3"
python-dateutil = "^2.8.2"
numpy-financial = "^1.0.0"
matplotlib = "^3.4.3"
altair = "^4.1.0"
altair-recipes = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.3"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = "^21.9b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^3.0.1"
Pygments = "^2.10.0"
jupyterlab = "^3.2.7"
ipywidgets = "^7.6.5"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["rentorown"]

[tool.coverage.report]
show_missing = true
fail_under = 43

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
